RESOLVED FIXED239782
REGRESSION (r293117): Context menu lift animation encompasses the entire web view
https://bugs.webkit.org/show_bug.cgi?id=239782
Summary REGRESSION (r293117): Context menu lift animation encompasses the entire web ...
Wenson Hsieh
Reported 2022-04-26 12:06:03 PDT
Attachments
Patch (9.42 KB, patch)
2022-04-26 12:08 PDT, Wenson Hsieh
no flags
Patch (2.30 KB, patch)
2022-04-26 12:40 PDT, Wenson Hsieh
ews-feeder: commit-queue-
Wenson Hsieh
Comment 1 2022-04-26 12:08:42 PDT
Aditya Keerthi
Comment 2 2022-04-26 12:19:40 PDT
Comment on attachment 458387 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=458387&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:-11898 > -- (UITargetedPreview *)contextMenuInteraction:(UIContextMenuInteraction *)interaction configuration:(UIContextMenuConfiguration *)configuration previewForHighlightingItemWithIdentifier:(id<NSCopying>)identifier The bug is probably due to using `previewForHighlightingItemWithIdentifier` rather than `highlightPreviewForItemWithIdentifier` here. But fine to revert if we need an immediate fix.
Wenson Hsieh
Comment 3 2022-04-26 12:20:45 PDT
(In reply to Aditya Keerthi from comment #2) > Comment on attachment 458387 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=458387&action=review > > > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:-11898 > > -- (UITargetedPreview *)contextMenuInteraction:(UIContextMenuInteraction *)interaction configuration:(UIContextMenuConfiguration *)configuration previewForHighlightingItemWithIdentifier:(id<NSCopying>)identifier > > The bug is probably due to using `previewForHighlightingItemWithIdentifier` > rather than `highlightPreviewForItemWithIdentifier` here. > > But fine to revert if we need an immediate fix. Yep! I'm checking to make sure that just moving to `-highlightPreviewForItemWithIdentifier` fixes this. If so, I'll land a version of the patch that just adopts the new method.
Wenson Hsieh
Comment 4 2022-04-26 12:40:45 PDT
EWS
Comment 5 2022-04-26 14:19:15 PDT
Tools/Scripts/svn-apply failed to apply attachment 458388 [details] to trunk. Please resolve the conflicts and upload a new patch.
Wenson Hsieh
Comment 6 2022-04-26 14:25:40 PDT
Note You need to log in before you can comment on or make changes to this bug.