REGRESSION (r293117): Context menu lift animation encompasses the entire web view https://bugs.webkit.org/show_bug.cgi?id=239782 rdar://92342919

Reviewed by Aditya Keerthi.

After r293117, we no longer implement the context menu delegate method for vending a targeted preview when
showing the context menu for a link or image; rename to match the name of the method we implement to match the
name of the UIKit delegate method.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView contextMenuInteraction:configuration:highlightPreviewForItemWithIdentifier:]):
(-[WKContentView contextMenuInteraction:configuration:previewForHighlightingItemWithIdentifier:]): Deleted.

Canonical link: https://commits.webkit.org/250003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293448 268f45cc-cd09-0410-ab3c-d52691b4dbfc